--- a/resume-parser-nestjs/package.json
+++ b/resume-parser-nestjs/package.json
@@ -30,6 +30,7 @@
     "apollo-server-express": "^3.6.1",
     "graphql": "^15.8.0",
     "multer": "^1.4.4",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
