--- a/resume-parser-nestjs/.env
+++ b/resume-parser-nestjs/.env
@@ -1,1 +1,1 @@
-DOCS_PATH=D:\nestjs-resume-parser\resume-parser-nestjs\src\assests
+DOCS_PATH=D:\resume-parser-reactjs-nestjs\resume-parser-nestjs\src\assests
